# xbeeb

./: 6502.c  6502.h  6522Via.c  6522Via.h  ADC.c  ADC.h  Acia.c  Acia.h  Beeb.c  Beeb.h  COPYRIGHT  Config.h  Crtc.c  Crtc.h  Display.c  Display.h  Econet.c  Econet.h  Fred.c  Fred.h  HELP  INSTALL  Imakefile  Jim.c  Jim.h  Keyboard.c  Keyboard.h  Makefile.v  Memory.c  Memory.h  Modes.c  Modes.h  Ops.h  README  README.md  RomSelect.c  RomSelect.h  Screen.c  Screen.h  SerialUla.c  (+18 more)
doc/: 64doc  Changes  Changes-v0.3  Changes-v0.4  Configuration  DataXfer  DiskEmulation  Help  Installation  Keyboard  KnownBugs  MailingLists  Options  RomPatches  Snapshot  SnapshotFormat  Thanks  WWWSites  WorkingSoftware
efs-demo/: $.DADC  $.LANDSC  S.CIRCLE  __CATALOG__
fonts/: ttext-grc-ldh.bdf  ttext-grc-udh.bdf  ttext-grc.bdf  ttext-grs-ldh.bdf  ttext-grs-udh.bdf  ttext-grs.bdf  ttext-std-ldh.bdf  ttext-std-udh.bdf  ttext-std.bdf
pch/: pch.c
roms/: README  xdfs0.70.rom  xdfs0.90.rom
src/: 6502.c  6502.h  6502ops.h  6522Via.c  6522Via.h  ADC.c  ADC.h  Acia.c  Acia.h  Beeb.c  Beeb.h  Bitmap.c  Bitmap.h  CMakeLists.txt  Compat.c  Compat.h  Config.h  Crtc.c  Crtc.h  Disk.c  Disk.h  Display.c  Display.h  EFS.c  EFS.h  EFSops.h  Econet.c  Econet.h  EmulFS.h  Floppy.c  Floppy.h  Fred.c  Fred.h  Imakefile  InfFS.c  InfoWindow.c  InfoWindow.h  Jim.c  Jim.h  Keyboard.c  (+42 more)
xdfs-demo/: $.HCAVES  B.DEMO  S.FILL  S.MAZEGEN  __CATALOG__
